# Graphoria

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
.windsurf/rules/: ui-rules.md
e2e-tests/: package-lock.json  package.json  wdio.conf.js
src/: App.css  App.frontend.test.tsx  App.tsx  DiffToolModal.test.tsx  DiffToolModal.tsx  DiffView.tsx  GitIgnoreModifierModal.tsx  SettingsModal.tsx  TooltipLayer.tsx  appSettingsStore.ts  main.tsx  monacoSetup.ts  shortcuts.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: branches.rs  clone.rs  commits.rs  conflicts.rs  diff.rs  gitlog.rs  interactive_rebase.rs  mod.rs  patches.rs  reflog.rs  repo.rs  startup.rs  stashes.rs  status.rs  tags.rs  terminal.rs
src/api/: git.ts  gitWorkingFiles.ts  system.ts
src/components/: BranchContextMenu.tsx  CommitContextMenu.tsx  DetailsPanel.tsx  MainHeader.tsx  RefBadgeContextMenu.tsx  RepoTabs.tsx  Sidebar.tsx  StashContextMenu.tsx  TagContextMenu.tsx  TopToolbar.tsx  WorkingFileContextMenu.tsx
src/hooks/: useContextMenuFit.ts  useGlobalShortcuts.ts
src/styles/: 01-theme.css  02-base.css  03-shell.css  04-commits.css  05-graph.css  06-details-tooltip.css  07-modal.css  08-conflict.css  09-status.css  10-settings.css  11-diff.css  12-interactive-rebase.css  13-gitlog.css  14-about.css  index.css
src/test/: setup.ts
src/testing/: backdoor.ts
src/types/: git.ts  (+1 more)
(+66 files in other folders)
